file(GLOB_RECURSE CPPFILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)

foreach(CPPFILE ${CPPFILES})
    get_filename_component(CPPNAME ${CPPFILE} NAME_WE)
    add_executable(${CPPNAME} ${CPPFILE})
	if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
		target_link_libraries(${CPPNAME} Reaktoro::Reaktoro)
	else()
		target_link_libraries(${CPPNAME} Reaktoro::Reaktoro stdc++fs)
	endif()
endforeach()
